# amiberry-mcp-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: HTTP_API_GUIDE.md  QUICKSTART_HTTP_API.md
scripts/: install.sh  install_http_api.sh  start_http_api.sh  test_http_api.sh  uninstall.sh
src/amiberry_mcp/: __init__.py  common.py  config.py  http_server.py  ipc_client.py  rom_manager.py  savestate.py  server.py  shared_state.py  uae_config.py
tests/: __init__.py  test_common.py  test_config.py  test_config_paths.py  test_http_server.py  test_ipc_client.py  test_mcp_connection.py  test_rom_manager.py  test_savestate.py  test_screenshot.py  test_server.py  test_server_fixes.py  test_shared_state.py  test_uae_config.py
