[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amiberry-mcp-server"
version = "1.0.0"
description = "MCP Server for controlling Amiberry Amiga emulator through Claude AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "midwan" }
]
keywords = ["mcp", "amiberry", "amiga", "emulator", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Emulators",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "amiberry-mcp-server[http,dev]",
]

[project.scripts]
amiberry-mcp = "amiberry_mcp.server:main"
amiberry-http = "amiberry_mcp.http_server:main"

[project.urls]
Homepage = "https://github.com/midwan/amiberry-mcp-server"
Repository = "https://github.com/midwan/amiberry-mcp-server"
Issues = "https://github.com/midwan/amiberry-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/amiberry_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["amiberry_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
